src/styles/global.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
/*
---break---*/
@custom-variant dark (&:is(.dark *));

@layer base {
  html {
    height: 100%;
  }

  body {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    min-height: 100%;
    height: 100%;
    line-height: 1.6;
    font-family: var(--font-nunito);
    color: var(--text-color);
    background: var(--body-background);
    font-size: calc(19 / 16 * 1rem);
  }

  * {
    box-sizing: border-box;
  }

  a {
    color: var(--text-color);
  }

  a:hover {
    color: var(--link-hover);
  }

  h1 {
    width: 100%;
    text-align: center;
  }

  hr {
    border: 0;
    border-top: 2px solid var(--overview-hr);
  }
}

.duostories_title {
  width: 160px;
  display: block;
  float: left;
  color: var(--duostories-title);
  font-weight: bold;
  font-size: 29px;
  text-decoration: none;
}
/*
outline-width: 2px;
  outline-offset: 2px;
  outline-style: dotted;
  outline-color: black;
button:focus {
  outline: none !important;
}
a:focus {
  outline: none !important;
}*/

body,
body[data-theme="light"] {
  --title-color-dim: #777;

  --header-border: lightgrey;

  --overview-hr: #e5e5e5;

  --duostories-title: #78c800;

  --text-color: black;
  --text-color-dim: #4c4c4c;
  --link-hover: #78c800;
  --body-background: white;

  --button-background: #58cc02;
  --button-color: white;
  --button-border: #58a700;

  --button-inactive-background: #e5e5e5;
  --button-inactive-color: #afafaf;

  --button-blue-background: #1cb0f6;
  --button-blue-border: #1899d6;
  --button-blue-color: var(--button-color);
  --button-side-border: 0px;

  --language-selector-hover-background: #ddf4ff;

  --input-background: #f7f7f7;
  --input-border: #e5e5e5;

  --error-red: #ea2b2b;
  --link-blue: #1cb0f6;

  --profile-background: #1cb0f6;
  --profile-text: white;

  --story-button-gold: rgb(255, 177, 0);

  --color_base_border: #e5e5e5;
  --color_base_background: #fff;
  --color_base_color: black;

  --color_right_background: #d7feb9;
  --color_right_border-color: #ade756;
  --color_right_color: #7da13c;

  --color_false_background: #feb9b9;
  --color_false_border-color: #e7565b;
  --color_false_color: #a13c3c;

  --color_selected_background: #ddf4ff;
  --color_selected_border-color: #84d8ff;
  --color_selected_color: #1cb0f6;

  --color_disabled_background: var(--color_base_background);
  --color_disabled_border-color: #e5e5e5;
  --color_disabled_color: #cfcfcf;

  --editor-selection-background: #f3f9ff;
  --editor-selection-border: #a4d1ff;
  --editor-ssml: lightgray;

  --footer-right-background: #d7ffb8;
  --footer-right-color: #58a700;
  --footer-icon-backgroud: white;

  --progress-back: #e5e5e5;
  --progress-inside: #78c800;
  --progress-highlight: #fff;

  --tooltip-backgroud: #f7f7f7;
  --tooltip-border: #e5e5e5;
  --tooltip-color: #4c4c4c;

  --underline-dashed: #e5e5e5;
  --underline-solid: #7b7b7b;
  --underline-dashed-highlight: #7b7b7b;

  --finished-star-gold: #ffc800;

  --body-background-faint: #f2f2f2;

  --svg-fill: #fbfbfb;
  --svg-stroke: #eee;

  --editor-hints-background: whitesmoke;
}

body[data-theme="dark"] .ͼ2 .cm-gutters {
  border-right: 1px solid #253b41;
  background-color: #334046;
}

body[data-theme="dark"] .ͼ2 .cm-activeLineGutter {
  background-color: #44575d;
}

body[data-theme="dark"] .ͼq {
  color: #00ff3c;
}

body[data-theme="dark"] .ͼo {
  color: #00ff3c;
  opacity: 0.7;
}

body[data-theme="dark"] .ͼs {
  color: #00ff3c;
  opacity: 0.6;
  border-bottom: 2px solid white;
}

body[data-theme="dark"] .ͼx {
  color: #007b1d;
  border-bottom: 2px solid white;
  background: #c8c8c8;
  border-radius: 10px;
  opacity: 0.6;
}

body[data-theme="dark"] .ͼu {
  opacity: 0.6;
  border-bottom: 2px solid white;
}

body[data-theme="dark"] .ͼr {
  color: #015cff;
}

body[data-theme="dark"] .ͼp {
  color: #015cff;
  opacity: 0.7;
}

body[data-theme="dark"] .ͼt {
  color: #005bff;
  opacity: 0.6;
  border-bottom: 2px solid white;
}

body[data-theme="dark"] .ͼy {
  color: #005cff;
  border-bottom: 2px solid white;
  background: #c1c1c1;
  border-radius: 10px;
  opacity: 0.6;
}

body[data-theme="dark"] {
  --header-border: #37464f;

  --overview-hr: #3c474b;

  --text-color: #f1f7fb;
  --text-color-dim: #f1f7fb;
  --body-background: #131f22;

  --language-selector-hover-background: #626b70;

  --button-color: #131f22;

  --input-background: #202f36;
  --input-border: #37464f;

  --error-red: #d84848;

  --button-blue-background: #131f22;
  --button-blue-border: #37464f;
  --button-blue-color: #49c0f8;
  --button-side-border: 2px;

  --color_base_border: #37464f;
  --color_base_background: #131f22;
  --color_base_color: #f1f7fb;

  --color_right_background: #202f36;
  --color_right_border-color: #5f8428;
  --color_right_color: #58cc02;

  --color_false_background: #202f36;
  --color_false_border-color: #842828;
  --color_false_color: #cc0202;

  --color_selected_background: #202f36;
  --color_selected_border-color: #3f85a7;
  --color_selected_color: #49c0f8;

  --color_disabled_background: var(--color_base_background);
  --color_disabled_border-color: #37464f;
  --color_disabled_color: #37464f;

  --progress-back: #37464f;
  --footer-right-background: #37464f;
  --footer-right-color: #79b933;

  --editor-selection-background: #202f36;
  --editor-selection-border: #3f85a7;
  --editor-ssml: #555;

  --progress-inside: #93d333;
  --progress-highlight: #a9dc5c;

  --tooltip-backgroud: #37464f;
  --tooltip-border: #37464f;
  --tooltip-color: #f1f7fb;

  --underline-solid: #f1f7fb;
  --underline-dashed: #37464f;
  --underline-dashed-highlight: #f1f7fb;

  --body-background-faint: #202f36;

  --svg-fill: #202f36;
  --svg-stroke: #2c464d;

  --editor-hints-background: #313131;

  --finished-star-gold: #ffc800;
}

.cm-editor {
  height: 100%;
}

/*
  6. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font-family: inherit;
  font-size: inherit;
}

@keyframes spinnerFade1 {
  0% {
    opacity: 1;
  }
  33.33333% {
    opacity: 0.25;
  }
  66.66667% {
    opacity: 0.5;
  }
  to {
    opacity: 1;
  }
}

@keyframes spinnerFade2 {
  0% {
    opacity: 0.5;
  }
  33.33333% {
    opacity: 1;
  }
  66.66667% {
    opacity: 0.25;
  }
  to {
    opacity: 0.5;
  }
}

@keyframes spinnerFade3 {
  0% {
    opacity: 0.25;
  }
  33.33333% {
    opacity: 0.5;
  }
  66.66667% {
    opacity: 1;
  }
  to {
    opacity: 0.25;
  }
}

@keyframes placeholderShimmer {
  0% {
    background-position: -800px 0;
  }
  100% {
    background-position: 800px 0;
  }
}

/* language specifics */

.en {
  direction: ltr;
  font-family: var(--font-nunito);
}

@font-face {
  font-family: linja-pona;
  src: url("/linjalipamanka-normal.otf");
  font-weight: normal;
  font-style: normal;
}

.tok2 {
  font-family: linja-pona !important;
  font-feature-settings:
    "liga" 1,
    "clig" 1,
    "calt" 1,
    "kern" 1,
    "mark" 1;
  text-rendering: optimizeLegibility;
  font-size: 1.5em;
}

/*
---break---*/

@theme inline {
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);
  --radius-2xl: calc(var(--radius) + 8px);
  --radius-3xl: calc(var(--radius) + 12px);
  --radius-4xl: calc(var(--radius) + 16px);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}

/*
---break---*/

:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.129 0.042 264.695);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.129 0.042 264.695);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.129 0.042 264.695);
  --primary: oklch(0.208 0.042 265.755);
  --primary-foreground: oklch(0.984 0.003 247.858);
  --secondary: oklch(0.968 0.007 247.896);
  --secondary-foreground: oklch(0.208 0.042 265.755);
  --muted: oklch(0.968 0.007 247.896);
  --muted-foreground: oklch(0.554 0.046 257.417);
  --accent: oklch(0.968 0.007 247.896);
  --accent-foreground: oklch(0.208 0.042 265.755);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.929 0.013 255.508);
  --input: oklch(0.929 0.013 255.508);
  --ring: oklch(0.704 0.04 256.788);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.984 0.003 247.858);
  --sidebar-foreground: oklch(0.129 0.042 264.695);
  --sidebar-primary: oklch(0.208 0.042 265.755);
  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
  --sidebar-accent: oklch(0.968 0.007 247.896);
  --sidebar-accent-foreground: oklch(0.208 0.042 265.755);
  --sidebar-border: oklch(0.929 0.013 255.508);
  --sidebar-ring: oklch(0.704 0.04 256.788);
}

/*
---break---*/

.dark {
  --background: oklch(0.129 0.042 264.695);
  --foreground: oklch(0.984 0.003 247.858);
  --card: oklch(0.208 0.042 265.755);
  --card-foreground: oklch(0.984 0.003 247.858);
  --popover: oklch(0.208 0.042 265.755);
  --popover-foreground: oklch(0.984 0.003 247.858);
  --primary: oklch(0.929 0.013 255.508);
  --primary-foreground: oklch(0.208 0.042 265.755);
  --secondary: oklch(0.279 0.041 260.031);
  --secondary-foreground: oklch(0.984 0.003 247.858);
  --muted: oklch(0.279 0.041 260.031);
  --muted-foreground: oklch(0.704 0.04 256.788);
  --accent: oklch(0.279 0.041 260.031);
  --accent-foreground: oklch(0.984 0.003 247.858);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.551 0.027 264.364);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.208 0.042 265.755);
  --sidebar-foreground: oklch(0.984 0.003 247.858);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
  --sidebar-accent: oklch(0.279 0.041 260.031);
  --sidebar-accent-foreground: oklch(0.984 0.003 247.858);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.551 0.027 264.364);
}

/*
---break---*/

@layer base {
  * {
    @apply border-border outline-ring/50;
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
    @apply bg-background text-foreground;
  }
}

